deployment/auth-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-db
  name: auth-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/deployment-default: "true"
        io.kompose.service: auth-db
    spec:
      containers:
        - env:
            - name: API_HOST
              valueFrom:
                configMapKeyRef:
                  key: API_HOST
                  name: env
            - name: AUTH_APP_PORT
              valueFrom:
                configMapKeyRef:
                  key: AUTH_APP_PORT
                  name: env
            - name: AUTH_DB_HOST
              valueFrom:
                configMapKeyRef:
                  key: AUTH_DB_HOST
                  name: env
            - name: AUTH_DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: AUTH_DB_NAME
                  name: env
            - name: AUTH_DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: AUTH_DB_PASSWORD
                  name: env
            - name: AUTH_DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: AUTH_DB_PORT
                  name: env
            - name: AUTH_DB_USER
              valueFrom:
                configMapKeyRef:
                  key: AUTH_DB_USER
                  name: env
            - name: AUTH_JWT_KEY
              valueFrom:
                configMapKeyRef:
                  key: AUTH_JWT_KEY
                  name: env
            - name: CHATS_APP_PORT
              valueFrom:
                configMapKeyRef:
                  key: CHATS_APP_PORT
                  name: env
            - name: CHATS_DB_HOST
              valueFrom:
                configMapKeyRef:
                  key: CHATS_DB_HOST
                  name: env
            - name: CHATS_DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: CHATS_DB_NAME
                  name: env
            - name: CHATS_DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: CHATS_DB_PASSWORD
                  name: env
            - name: CHATS_DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: CHATS_DB_PORT
                  name: env
            - name: CHATS_DB_USER
              valueFrom:
                configMapKeyRef:
                  key: CHATS_DB_USER
                  name: env
            - name: CHATS_KAFKA_HOST
              valueFrom:
                configMapKeyRef:
                  key: CHATS_KAFKA_HOST
                  name: env
            - name: POSTGRES_DB
              value: ${AUTH_DB_NAME}
            - name: POSTGRES_PASSWORD
              value: ${AUTH_DB_PASSWORD}
            - name: POSTGRES_USER
              value: ${AUTH_DB_USER}
            - name: POSTS_APP_PORT
              valueFrom:
                configMapKeyRef:
                  key: POSTS_APP_PORT
                  name: env
            - name: POSTS_DB_HOST
              valueFrom:
                configMapKeyRef:
                  key: POSTS_DB_HOST
                  name: env
            - name: POSTS_DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: POSTS_DB_NAME
                  name: env
            - name: POSTS_DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTS_DB_PASSWORD
                  name: env
            - name: POSTS_DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: POSTS_DB_PORT
                  name: env
            - name: POSTS_DB_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTS_DB_USER
                  name: env
          image: postgres
          name: auth-db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/auth/data
              name: app-data
      restartPolicy: Always
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data
status: {}
