deployment/posts-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: posts-db
  name: posts-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: posts-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/deployment-default: "true"
        io.kompose.service: posts-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: ${POSTS_DB_NAME}
            - name: POSTGRES_PASSWORD
              value: ${POSTS_DB_PASSWORD}
            - name: POSTGRES_USER
              value: ${POSTS_DB_USER}
          image: postgres
          name: posts-db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/posts/data
              name: app-data
      restartPolicy: Always
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data
status: {}
