deployment/chat-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: chat-service
  name: chat-service
spec:
  ports:
    - name: "50053"
      port: 50053
      targetPort: 50053
  selector:
    io.kompose.service: chat-service
status:
  loadBalancer: {}
