deployment/kafka-zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-zookeeper
  name: kafka-zookeeper
spec:
  ports:
    - name: "22181"
      port: 22181
      targetPort: 2181
  selector:
    io.kompose.service: kafka-zookeeper
status:
  loadBalancer: {}
