deployment/posts-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: posts-service
  name: posts-service
spec:
  ports:
    - name: "50052"
      port: 50052
      targetPort: 50052
  selector:
    io.kompose.service: posts-service
status:
  loadBalancer: {}
